# git-rust

./: .gitignore  CMakeLists.txt  meson.build
src/: main.cpp
subprojects/core/: CMakeLists.txt  Cargo.toml
subprojects/core/src/: lib.rs
